--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hannushchenko/simplehtmlapplication.git"
+    "url": "git+https://github.com/hannushchenko/simplehtmlapplication"
   },
   "author": "Hannushchenko",
   "license": "ISC",
